# deskflow

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-network-pipeline-rewrite/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-REVIEW.md  SKELETON.md
.planning/phases/02-tls-encryption-removal/: 02-01-PLAN.md  02-02-PLAN.md  02-03-PLAN.md  02-03-SUMMARY.md  02-RESEARCH.md
.planning/phases/03-platform-feature-cleanup/: 03-01-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-cpp-modernization/: 04-01-PLAN.md  04-02-PLAN.md  04-03-PLAN.md  04-04-PLAN.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-RESEARCH.md
.planning/phases/05-build-validation-regression/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-CONTEXT.md  05-DISCUSSION-LOG.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
cmake/: FetchAsio.cmake  Libraries.cmake  vcpkg.json.in
src/apps/: CMakeLists.txt
src/apps/deskflow-core/: CMakeLists.txt
src/apps/deskflow-gui/: CMakeLists.txt  deskflow-gui.cpp
src/lib/arch/: CMakeLists.txt
src/lib/base/: Event.h  EventQueue.cpp  EventQueue.h  EventTypes.h
src/lib/client/: CMakeLists.txt  Client.cpp  Client.h  ServerProxy.cpp  ServerProxy.h
src/lib/common/: PlatformInfo.h  Settings.cpp  Settings.h  UrlConstants.h
src/lib/deskflow/: App.cpp  App.h  CMakeLists.txt  ClientApp.cpp  IClient.h  IPlatformScreen.h  PlatformScreen.h  ProtocolTypes.cpp  ProtocolTypes.h  Screen.cpp  Screen.h  ServerApp.cpp
src/lib/gui/: CMakeLists.txt  Logger.cpp  MainWindow.cpp  MainWindow.h  Messages.cpp
src/lib/gui/core/: CoreProcess.cpp  CoreProcess.h
src/lib/gui/dialogs/: AboutDialog.cpp  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui
src/lib/gui/widgets/: StatusBar.cpp  StatusBar.h
src/lib/net/: AsioTCPListenSocket.cpp  AsioTCPListenSocket.h  AsioTCPSocket.cpp  AsioTCPSocket.h  AsioTCPSocketFactory.cpp  AsioTCPSocketFactory.h  CMakeLists.txt  ISocketFactory.h  InputEventBuffer.cpp  InputEventBuffer.h  KeyStateTable.cpp  KeyStateTable.h  SocketMultiplexer.cpp  SocketMultiplexer.h  SpscQueue.h  TCPSocketFactory.cpp  TCPSocketFactory.h
src/lib/platform/: CMakeLists.txt  MSWindowsDesks.cpp  MSWindowsDesks.h  MSWindowsHook.cpp  MSWindowsHook.h  MSWindowsScreen.cpp  MSWindowsScreen.h  OSXScreen.h  OSXScreen.mm
src/lib/server/: BaseClientProxy.h  CMakeLists.txt  ClientListener.cpp  ClientListener.h  ClientProxy.h  ClientProxy1_0.cpp  ClientProxy1_0.h  ClientProxy1_1.cpp  ClientProxy1_8.cpp  Config.cpp  InputFilter.cpp  InputFilter.h  PrimaryClient.cpp  PrimaryClient.h  Server.cpp  Server.h
src/unittests/: CMakeLists.txt
src/unittests/common/: SettingsTests.cpp  SettingsTests.h
src/unittests/deskflow/: CMakeLists.txt
src/unittests/legacytests/: CMakeLists.txt
src/unittests/net/: CMakeLists.txt
src/unittests/platform/: CMakeLists.txt
translations/: deskflow_es.ts  deskflow_it.ts  deskflow_ja.ts  deskflow_ko.ts  deskflow_ru.ts  deskflow_zh_CN.ts
